{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Camera",
            "id": "e660cf6b-f9e1-4aa6-91c0-cfbfdd803b35",
            "actions": [
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "da7ab17d-8db3-470c-9c49-50fd5e3f1dbb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "0cfa0a2e-77a5-49c0-b69e-8f4891880d0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ee301bdb-7fb8-419d-aac2-0807cdbf7582",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "47bdcfc3-6d0f-47bc-9f73-10b0e501f017",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5f237667-19cf-4631-b5b3-965cb744bd82",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6e890909-2ca1-4f36-86bb-7c17c4d3a44b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "581a4e40-bb56-425b-8e98-99fa8cde1eba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "07462963-c6f1-4d78-96a7-3fcb102acd1d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Setting",
            "id": "c7aadc0e-47e6-4d72-a8a8-2c4f8cd1e8fe",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "513f5141-67b4-483e-8a49-9aeba6b8717c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0cbd7c1-0690-4a79-869f-1c289aedf4cb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}